--- a/static/index.html
+++ b/static/index.html
@@ -8,6 +8,7 @@
 
     <script src="/lib/jquery/dist/jquery.js"></script>
     <script src="/lib/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="/lib/sugar/release/sugar.min.js"></script>
     <script src="/lib/angular/angular.js"></script>
     <script src="/js/controllers.js"></script>
   </head>
@@ -22,47 +23,74 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{user.name || 'Anonimus'}}<span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">
-                <li><a href="#">Profile</a></li>
-                <li><a href="#">History</a></li>
-                <li class="divider"></li>
-                <li><a href="#">Exit</a></li>
-              </ul>
+            <li class='active'>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" ng-click='exit()'>Exit</span></a>
             </li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
     <div class='container'>
-      <div class="panel panel-success">
-        <div class="panel-heading">Please, take a look.</div>
-        <div class="panel-body">
-          Be calm, and don't offend others. Read our <a href='#'>Terms</a>
+      <div class='col-md-3 '>
+        <div class="panel panel-default pull-left" style='width: 100%;'>
+          <div class="panel-heading clearfix">
+            <div class="media">
+              <a class="pull-left" href="#">
+                <img class="media-object" src="/images/user.png" alt="" height="42" width="42">
+              </a>
+              <div class="media-body">
+                <h4 class="media-heading">{{user.name}}</h4>
+                <small>Joined: {{user.joinedAt | date : 'shortTime'}}</small>
+              </div>
+            </div>
+          </div>
+          <div class="panel-body">
+            <div class="media" ng-repeat="user in users">
+              <a class="pull-left" href="#">
+                <img class="media-object" src="/images/user.png" alt="" height="16" width="16">
+              </a>
+              <div class="media-body">
+                <h6 class="media-heading">{{user.name}}</h6>
+                <small>Joined: {{user.joinedAt | date : 'shortTime'}}</small>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-      <div>
-        <div class="media" ng-repeat="message in messages">
-          <a class="pull-left" href="#">
-            <img class="media-object" src="/images/user.png" alt="" height="42" width="42">
-          </a>
-          <div class="media-body">
-            <h4 class="media-heading">{{message.sender}}</h4>
-            {{message.text}}
-          </div>
+
+      <div class='col-md-8'>
+        <div class="alert alert-success alert-dismissible" role="alert">
+          <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+          <strong>Be calm!</strong> Don't offend others. Read our <a href='#' data-toggle="modal" data-target="#terms">Terms</a>
         </div>
-        <br />
-        <br />
-        <form action='/room/messages' method='post'>
-          <div class='form-group'>
-            <label>Type message here...</label>
-            <br />
-            <textarea id='messagenew' name='message' ng-model='message.text' ng-required='true' required='true' class='form-control'></textarea>
-            <br />
-            <input type='button' value='Send' ng-click='postMessage()' class='btn btn-primary' />
+
+
+
+
+
+        <div>
+          <div class="media" ng-repeat="message in messages">
+            <a class="pull-left" href="#">
+              <img class="media-object" src="/images/user.png" alt="" height="42" width="42">
+            </a>
+            <div class="media-body">
+              <div class='pull-right'>{{message.createdAt | date : 'shortTime' }}</div>
+              <h4 class="media-heading">{{message.sender}}</h4>
+              {{message.text}}
+            </div>
           </div>
-        </form>
+          <br />
+          <br />
+          <form action='/room/messages' method='post'>
+            <div class='form-group'>
+              <label>Type message here...</label>
+              <br />
+              <textarea id='messagenew' name='message' ng-model='message.text' ng-required='true' required='true' class='form-control'></textarea>
+              <br />
+              <input type='button' value='Send' ng-click='postMessage()' class='btn btn-primary pull-right' />
+            </div>
+          </form>
+        </div>
 
         <!-- Modal -->
         <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -76,6 +104,22 @@
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-primary" ng-click='setUserName()'>Save changes</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="modal fade" id="terms" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                <h4 class="modal-title" id="myModalLabel">Terms of Service</h4>
+              </div>
+              <div class="modal-body">
+                Talk to your grandparents.
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Ok</button>
               </div>
             </div>
           </div>
